--- a/NuCore.Utilities.Lightning/NuCore.Utilities.Lightning.csproj
+++ b/NuCore.Utilities.Lightning/NuCore.Utilities.Lightning.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
@@ -7,9 +7,9 @@
     <RootNamespace>NuCore.Utilities</RootNamespace>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<PlatformTarget>x64</PlatformTarget>
-	  <TransformOnBuild>true</TransformOnBuild>
-	  <TransformOutOfDateOnly>false</TransformOutOfDateOnly>
-	  <OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
+	<TransformOnBuild>true</TransformOnBuild>
+	<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
+	<OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
   </PropertyGroup>
 
 
