--- a/NuCore.SDL2-CS/LightningBase.csproj
+++ b/NuCore.SDL2-CS/LightningBase.csproj
@@ -38,6 +38,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\NuCore.Utilities\NuCore.Utilities.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
   </ItemGroup>
 
