more animtool work, expand localsettings api

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -164,6 +164,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="Content\Logo\iDLogo.png">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
     <None Update="Tools\AssemblyInfo.tt">
       <LastGenOutput>AssemblyInfo.cs</LastGenOutput>
       <Generator>TextTemplatingFileGeneratorCore</Generator>
