always invariant culture ignore case, block .mod files as they are broken and ALSO begin porting examples to 1.1

--- a/Examples/shared/Content/Engine.ini
+++ b/Examples/shared/Content/Engine.ini
@@ -4,13 +4,16 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = true ; used for basic examples
+DontUseSceneManager = true ; TEMP 20
+SplashScreenEnabled = true
 
 [Graphics]
 ResolutionX = 960
 ResolutionY = 640
-
 WindowFlags = "SDL_WINDOW_SHOWN"
 
 [Localisation]
 Language = "en-GB-test"
+
+;[Scene]
+;StartupScene = "MainScene"
