--- a/Examples/ParticleEffect/ParticleEffect.csproj
+++ b/Examples/ParticleEffect/ParticleEffect.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -24,69 +24,69 @@
 
   <!-- Shared includes for all examples. These are copied individually because they are open source and devs use them as part of the SDK -->
   <ItemGroup>
-	  <None Remove="../shared/libFLAC-8.dll" />
-	  <None Remove="../shared/libmodplug-1.dll" />
-	  <None Remove="../shared/libmpg123-0.dll" />
-	  <None Remove="../shared/libogg-0.dll" />
-	  <None Remove="../shared/libopus-0.dll" />
-	  <None Remove="../shared/libopusfile-0.dll" />
-	  <None Remove="../shared/libpng16-16.dll" />
-	  <None Remove="../shared/libvorbis-0.dll" />
-	  <None Remove="../shared/libvorbisfile-3.dll" />
-	  <None Remove="../shared/zlib.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libFLAC-8.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libmodplug-1.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libmpg123-0.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libogg-0.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libopus-0.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libopusfile-0.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libpng16-16.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libvorbis-0.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/libvorbisfile-3.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/zlib.dll" />
 	  <None Remove="../shared/Content/Engine.ini" />
 	  <None Remove="../shared/Content/Localisation/en-GB-test.ini" />
 	  <None Remove="../shared/Content/Localisation/pseudo.ini" />
-	  <None Remove="../shared/Content/Libraries/libfreetype-6.dll" />
-	  <None Remove="../shared/Content/Libraries/libjpeg-9.dll" />
-	  <None Remove="../shared/Content/Libraries/libtiff-5.dll" />
-	  <None Remove="../shared/Content/Libraries/libwebp-7.dll" />
-	  <None Remove="../shared/Content/Libraries/SDL2.dll" />
-	  <None Remove="../shared/Content/Libraries/SDL2_gfx-v1.0.6-x64.dll" />
-	  <None Remove="../shared/Content/Libraries/SDL2_image-v2.0.5-x64.dll" />
-	  <None Remove="../shared/Content/Libraries/SDL2_ttf-v2.0.18-x64.dll" />
-	  <None Remove="../shared/Content/Libraries/SDL2_mixer-v2.0.4-x64.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libfreetype-6.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libjpeg-9.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libtiff-5.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/libwebp-7.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_gfx-v1.0.6-x64.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_image-x64.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_ttf-v2.0.18-x64.dll" />
+	  <None Remove="$(ProgramFiles)/Lightning Software Development Kit/Content/Libraries/SDL2_mixer-x64.dll" />
 	  <None Remove="Content\ParticleEffect.png" />
   </ItemGroup>
 
   <ItemGroup>
-	  <Content Include="../shared/libFLAC-8.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libFLAC-8.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libFLAC-8.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libmodplug-1.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libmodplug-1.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libmodplug-1.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libmpg123-0.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libmpg123-0.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libmpg123-0.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libogg-0.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libogg-0.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libogg-0.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libopus-0.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libopus-0.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libopus-0.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libopusfile-0.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libopusfile-0.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libopusfile-0.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libpng16-16.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libpng16-16.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libpng16-16.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libvorbis-0.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libvorbis-0.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libvorbis-0.dll</Link>
 	  </Content>
-	  <Content Include="../shared/libvorbisfile-3.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/libvorbisfile-3.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>libvorbisfile-3.dll</Link>
 	  </Content>
-	  <Content Include="../shared/zlib1.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/zlib1.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>zlib1.dll</Link>
 	  </Content>
@@ -101,41 +101,41 @@
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Content/Localisation/pseudo.ini</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/libfreetype-6.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libfreetype-6.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/libfreetype-6.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/libjpeg-9.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libjpeg-9.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/libjpeg-9.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/libtiff-5.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libtiff-5.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/libtiff-5.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/libwebp-7.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/libwebp-7.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/libwebp-7.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/SDL2.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/SDL2.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/SDL2_gfx-v1.0.6-x64.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_gfx-v1.0.6-x64.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/SDL2_gfx-v1.0.6-x64.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/SDL2_image-v2.0.5-x64.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_image-x64.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2_image-v2.0.5-x64.dll</Link>
+		  <Link>Libraries/SDL2_image-x64.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/SDL2_ttf-v2.0.18-x64.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_ttf-v2.0.18-x64.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 		  <Link>Libraries/SDL2_ttf-v2.0.18-x64.dll</Link>
 	  </Content>
-	  <Content Include="../shared/Libraries/SDL2_mixer-v2.0.4-x64.dll">
+	  <Content Include="$(ProgramFiles)/Lightning Software Development Kit/Libraries/SDL2_mixer-x64.dll">
 		  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-		  <Link>Libraries/SDL2_mixer-v2.0.4-x64.dll</Link>
+		  <Link>Libraries/SDL2_mixer-x64.dll</Link>
 	  </Content>
 	  <Content Include="Content\ParticleEffect.png">
 	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
