--- a/Examples/basic/Basic.csproj
+++ b/Examples/basic/Basic.csproj
@@ -1,30 +1,33 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-	<PropertyGroup>
-		<OutputType>Exe</OutputType>
-		<TargetFramework>net6.0</TargetFramework>
-		<ImplicitUsings>enable</ImplicitUsings>
-		<Nullable>enable</Nullable>
-		<PlatformTarget>x64</PlatformTarget>
-	</PropertyGroup>
+  <PropertyGroup>
+    <OutputType>Exe</OutputType>
+    <TargetFramework>net6.0</TargetFramework>
+    <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <PlatformTarget>x64</PlatformTarget>
+  </PropertyGroup>
 
-	<ItemGroup>
-		<Reference Include="LightningGL">
-			<HintPath>..\shared\LightningGL.dll</HintPath>
-		</Reference>
-		<Reference Include="LightningPackager">
-			<HintPath>..\shared\LightningPackager.dll</HintPath>
-		</Reference>
-		<Reference Include="NuCore.SDL2">
-			<HintPath>..\shared\NuCore.SDL2.dll</HintPath>
-		</Reference>
-		<Reference Include="NuCore.Utilities">
-			<HintPath>..\shared\NuCore.Utilities.dll</HintPath>
-		</Reference>
-	</ItemGroup>
+  <ItemGroup>
+	  <Reference Include="LightningBase">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningBase.dll</HintPath>
+	  </Reference>
+	  <Reference Include="LightningGL">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningGL.dll</HintPath>
+	  </Reference>
+	  <Reference Include="LightningPackager">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
+	  </Reference>
+	  <Reference Include="NuCore.Utilities">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
+	  </Reference>
+	  <Reference Include="NuCore.Utilities.Lightning">
+		  <HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.Lightning.dll</HintPath>
+	  </Reference>
+  </ItemGroup>
 
 	<!-- Shared includes for all examples. These are copied individually because they are open source and devs use them as part of the SDK -->
-	<ItemGroup>
+    <ItemGroup>
 		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/libFLAC-8.dll" />
 		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/libmodplug-1.dll" />
 		<None Remove="$(ProgramFiles)/Lightning Software Development Kit/libmpg123-0.dll" />
