--- a/Examples/Packaging/Packaging.csproj
+++ b/Examples/Packaging/Packaging.csproj
@@ -8,17 +8,20 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<Reference Include="LightningBase">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningBase.dll</HintPath>
+		</Reference>
 		<Reference Include="LightningGL">
-			<HintPath>..\shared\LightningGL.dll</HintPath>
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningGL.dll</HintPath>
 		</Reference>
 		<Reference Include="LightningPackager">
-			<HintPath>..\shared\LightningPackager.dll</HintPath>
-		</Reference>
-		<Reference Include="NuCore.SDL2">
-			<HintPath>..\shared\NuCore.SDL2.dll</HintPath>
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/LightningPackager.dll</HintPath>
 		</Reference>
 		<Reference Include="NuCore.Utilities">
-			<HintPath>..\shared\NuCore.Utilities.dll</HintPath>
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.dll</HintPath>
+		</Reference>
+		<Reference Include="NuCore.Utilities.Lightning">
+			<HintPath>$(ProgramFiles)/Lightning Software Development Kit/NuCore.Utilities.Lightning.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
