create localsettings.ini if localsettingspath is set and the file does not exist

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -6,6 +6,7 @@ ShowDebugInfo = true
 PerformanceProfiler = false
 DontUseSceneManager = true ; TEMP 20
 SplashScreenEnabled = true
+LocalSettingsPath = "LocalSettings.ini"
 
 [Graphics]
 ResolutionX = 960
