--- a/Examples/Settings/Content/Engine.ini
+++ b/Examples/Settings/Content/Engine.ini
@@ -5,6 +5,7 @@ MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
 DontUseSceneManager = false ; used for Settings examples
+LocalSettingsPath = "LocalSettings.ini"
 
 [Graphics]
 ResolutionX = 960
