--- a/Examples/Animation/Animation.csproj
+++ b/Examples/Animation/Animation.csproj
@@ -6,6 +6,7 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PlatformTarget>x64</PlatformTarget>
+    <RootNamespace>AnimationDemo</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
