fix minor issue in engine.ini

--- a/VSTemplate/Content/Engine.ini
+++ b/VSTemplate/Content/Engine.ini
@@ -4,16 +4,17 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = false ; used for $safeprojectname$ examples
+DontUseSceneManager = true ; TEMP 20
+SplashScreenEnabled = true
+LocalSettingsPath = "LocalSettings.ini"
 
 [Graphics]
 ResolutionX = 960
 ResolutionY = 640
-
 WindowFlags = "SDL_WINDOW_SHOWN"
 
 [Localisation]
 Language = "en-GB-test"
 
-[Scene]
-StartupScene = "MainScene";
+;[Scene]
+;StartupScene = "MainScene"
