--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -2,7 +2,7 @@
 
 [General]
 ShowDebugInfo = true
-PerformanceProfiler = false
+ProfilePerformance = false
 DontUseSceneManager = true ; TEMP 20
 SplashScreenEnabled = true
 LocalSettingsPath = "LocalSettings.ini"
