fix again default project

--- a/VSTemplate/Content/Engine.ini
+++ b/VSTemplate/Content/Engine.ini
@@ -4,8 +4,6 @@
 MaxFPS = -1 ; 0 or lower = off
 ShowDebugInfo = true
 PerformanceProfiler = false
-DontUseSceneManager = true ; TEMP 20
-SplashScreenEnabled = true
 LocalSettingsPath = "LocalSettings.ini"
 
 [Graphics]
@@ -16,5 +14,5 @@ WindowFlags = "SDL_WINDOW_SHOWN"
 [Localisation]
 Language = "en-GB-test"
 
-;[Scene]
-;StartupScene = "MainScene"
+[Scene]
+StartupScene = "MainScene"
