(unfinished)  make scene manager required

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -146,6 +146,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Developer\Console\Commands\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
