--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -3,7 +3,6 @@
 [General]
 ShowDebugInfo = true
 ProfilePerformance = false
-DontUseSceneManager = true ; TEMP 20
 SplashScreenEnabled = true
 LocalSettingsPath = "LocalSettings.ini"
 
@@ -16,5 +15,5 @@ WindowFlags = "SDL_WINDOW_SHOWN"
 [Localisation]
 Language = "en-GB-test"
 
-;[Scene]
-;StartupScene = "MainScene"
+[Scene]
+StartupScene = "TestScene1"
