--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -10,6 +10,7 @@
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<PlatformTarget>x64</PlatformTarget>
 	<Product>$(AssemblyName)</Product>
+	<Nullable>enable</Nullable>
   </PropertyGroup>
 	
 <!-- Import text templating -->
