gadgets no longer draw shit every frame

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -148,6 +148,7 @@
 
   <ItemGroup>
     <Folder Include="Developer\Console\Commands\" />
+    <Folder Include="Developer\Debug\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
