CLIENT/server separation (not sure if this is good)

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -149,6 +149,7 @@
   <ItemGroup>
     <Folder Include="Content\Fonts\" />
     <Folder Include="Developer\Console\Commands\" />
+    <Folder Include="Network\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
