--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -2,7 +2,7 @@
 
 [General]
 ShowDebugInfo = true
-ProfilePerformance = false
+ProfilePerformance = true
 SplashScreenEnabled = true
 LocalSettingsPath = "LocalSettings.ini"
 
