"functional" client and server

--- a/Lightning2/Content/Engine.ini
+++ b/Lightning2/Content/Engine.ini
@@ -2,7 +2,7 @@
 
 [General]
 ShowDebugInfo = true
-ProfilePerformance = true
+ProfilePerformance = false
 SplashScreenEnabled = true
 LocalSettingsPath = "LocalSettings.ini"
 
