reduce filesize of sdksetup slightly by getting rid of some log files, sdkbuild framework version independent

--- a/SDKBuild/SDKBuild.csproj
+++ b/SDKBuild/SDKBuild.csproj
@@ -9,7 +9,9 @@
 	  <TransformOnBuild>true</TransformOnBuild>
 	  <TransformOutOfDateOnly>false</TransformOutOfDateOnly>
 	  <OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
-	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+	  <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
+	  <AssemblyVersion>2.2.0.0</AssemblyVersion>
+	  <FileVersion>2.2.0.0</FileVersion>
   </PropertyGroup>
 
 	<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
