freetype glyph caching, we don't need sdl3 notices

--- a/Examples/BasicScene/Content/Engine.ini
+++ b/Examples/BasicScene/Content/Engine.ini
@@ -6,8 +6,9 @@ ShowDebugInfo = true
 PerformanceProfiler = false
 
 [Graphics]
-ResolutionX = 960
-ResolutionY = 640
+;comment these out to force default to native res
+;ResolutionX = 960
+;ResolutionY = 640
 
 WindowFlags = "SDL_WINDOW_SHOWN"
 
