--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -149,6 +149,7 @@
     <Folder Include="Content\Fonts\" />
     <Folder Include="Developer\Console\Commands\" />
     <Folder Include="Properties\" />
+    <Folder Include="Rendering\Text\" />
   </ItemGroup>
 
   <ItemGroup>
