--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -60,13 +60,9 @@
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
 	  <Link>libFLAC-8.dll</Link>
     </Content>
-    <Content Include="..\Libraries\libfreetype-6.dll">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  <Link>Libraries\libfreetype-6.dll</Link>
-    </Content>
     <Content Include="..\Libraries\libjpeg-9.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  <Link>Libraries\libjpeg-5.dll</Link>
+	  <Link>libjpeg-5.dll</Link>
     </Content>
     <Content Include="..\Libraries\libmodplug-1.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -94,7 +90,7 @@
     </Content>
     <Content Include="..\Libraries\libtiff-5.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  <Link>Libraries\libtiff-5.dll</Link>
+	  <Link>libtiff-5.dll</Link>
     </Content>
     <Content Include="..\Libraries\SDL2_image-x64.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -118,7 +114,7 @@
     </Content>
     <Content Include="..\Libraries\libwebp-7.dll">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-	  <Link>Libraries\libwebp-7.dll</Link>
+	  <Link>libwebp-7.dll</Link>
     </Content>
     <Content Include="..\Libraries\SDL2.dll">
 	  <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
