add final configuration that shuts off a lot of the excess logging

--- a/AnimTool/AnimTool.csproj
+++ b/AnimTool/AnimTool.csproj
@@ -12,6 +12,7 @@
 	  <TransformOutOfDateOnly>false</TransformOutOfDateOnly>
 	  <OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
 	  <ApplicationIcon>AnimTool.ico</ApplicationIcon>
+	  <Configurations>Debug;Release;Final</Configurations>
   </PropertyGroup>
 
 	<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
