--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -6,7 +6,7 @@
 	<TransformOnBuild>true</TransformOnBuild>
 	<OverwriteReadOnlyOutputFiles>true</OverwriteReadOnlyOutputFiles>
 	<TransformOutOfDateOnly>false</TransformOutOfDateOnly>
-	<Configurations>Debug;Release</Configurations>
+	<Configurations>Debug;Release;Final</Configurations>
 	<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
 	<PlatformTarget>x64</PlatformTarget>
 	<Product>$(AssemblyName)</Product>
@@ -22,6 +22,10 @@
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	</PropertyGroup>
+	
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
+	  <DefineConstants>TRACE;WINDOWS,X64,FINAL</DefineConstants>
 	</PropertyGroup>
 
   <ItemGroup>
