--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
+    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64;Final</Configurations>
   </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -21,6 +21,11 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PlatformTarget>x64</PlatformTarget>
 		<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
+	  <PlatformTarget>x64</PlatformTarget>
+	  <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
