--- a/NuCore.SDL2-CS/LightningBase.csproj
+++ b/NuCore.SDL2-CS/LightningBase.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <RootNamespace>LightningBase</RootNamespace>
-    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64</Configurations>
+    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64;Final</Configurations>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <Description>Lightning Native Bindings</Description>
     <Authors>Ethan, starfrost</Authors>
@@ -28,6 +28,11 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <PlatformTarget>x64</PlatformTarget>
+    <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
     <PlatformTarget>x64</PlatformTarget>
     <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
   </PropertyGroup>
