--- a/SDKBuild/SDKBuild.csproj
+++ b/SDKBuild/SDKBuild.csproj
@@ -12,6 +12,7 @@
 	  <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
 	  <AssemblyVersion>2.2.0.0</AssemblyVersion>
 	  <FileVersion>2.2.0.0</FileVersion>
+	  <Configurations>Debug;Release;Final</Configurations>
   </PropertyGroup>
 
 	<Import Project="$(MSBuildExtensionsPath)\Microsoft\VisualStudio\v$(VisualStudioVersion)\TextTemplating\Microsoft.TextTemplating.targets" />
