--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -26,6 +26,7 @@
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
 	  <PlatformTarget>x64</PlatformTarget>
 	  <DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
+	  <Optimize>True</Optimize>
 	</PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
