--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -26,6 +26,7 @@
 	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
 	  <DefineConstants>TRACE;WINDOWS,X64,FINAL</DefineConstants>
+	  <Optimize>True</Optimize>
 	</PropertyGroup>
 
   <ItemGroup>
