--- a/SDKBuild/SDKBuild.csproj
+++ b/SDKBuild/SDKBuild.csproj
@@ -13,6 +13,7 @@
 	  <AssemblyVersion>2.2.2.0</AssemblyVersion>
 	  <FileVersion>2.2.2.0</FileVersion>
 	  <Configurations>Debug;Release;Final</Configurations>
+	  <PublishAot>true</PublishAot>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Final|AnyCPU'">
