--- a/Lightning2.Launcher/LightningGL.Test.csproj
+++ b/Lightning2.Launcher/LightningGL.Test.csproj
@@ -5,19 +5,15 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <Configurations>Debug;Release;Debug.Arm64;Release.Arm64;Final</Configurations>
+    <Configurations>Debug;Release;Final</Configurations>
+	  <PublishAot>true</PublishAot>
   </PropertyGroup>
 
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
 		<PlatformTarget>x64</PlatformTarget>
 		<DefineConstants>DEBUG;TRACE;WINDOWS,X64</DefineConstants>
 	</PropertyGroup>
-
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
-		<PlatformTarget>ARM64</PlatformTarget>
-		<DefineConstants>DEBUG;TRACE;WINDOWS,ARM64</DefineConstants>
-	</PropertyGroup>
-
+	
 	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
 		<PlatformTarget>x64</PlatformTarget>
 		<DefineConstants>TRACE;WINDOWS,X64</DefineConstants>
@@ -29,10 +25,6 @@
 	  <Optimize>True</Optimize>
 	</PropertyGroup>
 
-	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug.Arm64|AnyCPU'">
-		<PlatformTarget>ARM64</PlatformTarget>
-		<DefineConstants>TRACE;WINDOWS,ARM64</DefineConstants>
-	</PropertyGroup>
 	
   <ItemGroup>
     <None Remove="Content\Animations\TestAnimation.json" />
