--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -11,6 +11,7 @@
 	<PlatformTarget>x64</PlatformTarget>
 	<Product>$(AssemblyName)</Product>
 	<Nullable>enable</Nullable>
+	  <PublishAot>true</PublishAot>
   </PropertyGroup>
 	
 <!-- Import text templating -->
