--- a/NuCore.Utilities/NuCore.Utilities.csproj
+++ b/NuCore.Utilities/NuCore.Utilities.csproj
@@ -9,6 +9,7 @@
 	<PlatformTarget>x64</PlatformTarget>
 	<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	<Nullable>enable</Nullable>
+	  <PublishAot>true</PublishAot>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
