begin working on the Input Method API

--- a/Lightning2/LightningGL.csproj
+++ b/Lightning2/LightningGL.csproj
@@ -143,6 +143,7 @@
 
   <ItemGroup>
     <Folder Include="Content\Fonts\" />
+    <Folder Include="Input\InputMethods\" />
     <Folder Include="Properties\" />
   </ItemGroup>
 
