--- a/Lightning2/Content/InputBindings.ini
+++ b/Lightning2/Content/InputBindings.ini
@@ -1,6 +1,9 @@
 ﻿; Control bindings INI
-; February 11, 2023
+; Created February 11, 2023
+; Default bindings added 
 
 [DS4] ; Sony DualShock 4
 [Xinput] ; Xinput Controller
 [KeyboardMouse] ; Keyboard & Mouse
+TriggerDebugDisplay = "F9"
+TriggerDebugConsole = "F10"
