--- a/Lightning2/Content/InputBindings.ini
+++ b/Lightning2/Content/InputBindings.ini
@@ -1,9 +1,11 @@
 ﻿; Control bindings INI
-; Created February 11, 2023
-; Default bindings added 
+; Created					February 11, 2023
+; Default bindings added	February 21, 2023
 
 [DS4] ; Sony DualShock 4
 [Xinput] ; Xinput Controller
 [KeyboardMouse] ; Keyboard & Mouse
-TriggerDebugDisplay = "F9"
-TriggerDebugConsole = "F10"
+DebugDisplayTrigger = "F9"
+DebugDisplayConsole = "F10"
+DebugDisplayPageUp = "PAGEUP"
+DebugDisplayPageDown = "PAGEDOWN"
