--- a/NuCore.Utilities/LightningUtil.csproj
+++ b/NuCore.Utilities/LightningUtil.csproj
@@ -9,6 +9,7 @@
 	<PlatformTarget>x64</PlatformTarget>
 	<AllowUnsafeBlocks>True</AllowUnsafeBlocks>
 	<Nullable>enable</Nullable>
+	  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
