--- a/NuCore.Utilities.Lightning/LightningUtilSdl.csproj
+++ b/NuCore.Utilities.Lightning/LightningUtilSdl.csproj
@@ -4,7 +4,7 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <RootNamespace>NuCore.Utilities</RootNamespace>
+    <RootNamespace>LightningUtil</RootNamespace>
 	<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
 	<PlatformTarget>x64</PlatformTarget>
 	<TransformOnBuild>true</TransformOnBuild>
@@ -20,7 +20,7 @@
 	
   <ItemGroup>
     <ProjectReference Include="..\NuCore.SDL2-CS\LightningBase.csproj" />
-    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
+    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
