--- a/SDKBuild/SDKBuild.csproj
+++ b/SDKBuild/SDKBuild.csproj
@@ -20,7 +20,7 @@
   </PropertyGroup>
 	
   <ItemGroup>
-    <ProjectReference Include="..\NuCore.Utilities\LightningUtil.csproj" />
+    <ProjectReference Include="..\LightningUtil\LightningUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
