fix event mouse button locations

--- a/Lightning2/Content/InputBindings.ini
+++ b/Lightning2/Content/InputBindings.ini
@@ -2,10 +2,11 @@
 ; Created					February 11, 2023
 ; Default bindings added	February 21, 2023
 
-[DS4] ; Sony DualShock 4
-[Xinput] ; Xinput Controller
+[Xinput] ; Xinput Controller (e.g. DualShock 4)
 [KeyboardMouse] ; Keyboard & Mouse
 DebugDisplayTrigger = "F9"
 DebugDisplayConsole = "F10"
 DebugDisplayPageUp = "PAGEUP"
 DebugDisplayPageDown = "PAGEDOWN"
+
+Mouse1 = "MOUSE1" ; DO NOT REMOVE! this is used for inbuilt ui elements!
